# 2024-P1-Krisna-Bou

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
